--- a/Last.fm-Scrubbler-WPF/Views/LoginView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/LoginView.xaml
@@ -34,7 +34,7 @@
     <Label Grid.Row="5" Grid.Column="1" HorizontalAlignment="Center" Content="Password"/>
     <PasswordBox Grid.Row="7" Grid.Column="1" x:Name="passwordBox"/>
 
-    <Button Grid.Row="9" Grid.Column="1" HorizontalAlignment="Center" Content="Login" IsEnabled="{Binding EnableControls}">
+    <Button Grid.Row="9" Grid.Column="1" HorizontalAlignment="Center" Content="Login" Style="{StaticResource EnableControlsStyle}">
       <i:Interaction.Triggers>
         <i:EventTrigger EventName="Click">
           <cal:ActionMessage MethodName="Login">
