--- a/Last.fm-Scrubbler-WPF/Views/MainView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/MainView.xaml
@@ -6,6 +6,7 @@
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:cal="http://www.caliburnproject.org"
         xmlns:views="clr-namespace:Last.fm_Scrubbler_WPF.Views"
+        xmlns:extraViews="clr-namespace:Last.fm_Scrubbler_WPF.Views.ExtraFunctions"
         mc:Ignorable="d"
         Title="Last.fm Scrubbler" Height="400" Width="650" Icon="..\scrubbler_64.ico">
   <i:Interaction.Triggers>
@@ -53,6 +54,9 @@
           </TabItem>
           <TabItem Header="CSV Downloader">
             <views:CSVDownloaderView DataContext="{Binding CSVDownloaderVM}"/>
+          </TabItem>
+          <TabItem Header="Collage Creator">
+            <extraViews:CollageCreatorView DataContext="{Binding CollageCreatorVM}"/>
           </TabItem>
         </TabControl>
       </TabItem>
