Fix crash when connecting to itunes while nothing is playing
Also it now does update "Now playing"

--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/ITunesScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/ITunesScrobbleView.xaml
@@ -175,6 +175,12 @@
                 <DataTrigger Binding="{Binding ITunesApp}" Value="{x:Null}">
                   <Setter Property="IsEnabled" Value="False"/>
                 </DataTrigger>
+                <DataTrigger Binding="{Binding CurrentTrackName}" Value="{x:Null}">
+                  <Setter Property="IsEnabled" Value="False"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding CurrentArtistName}" Value="{x:Null}">
+                  <Setter Property="IsEnabled" Value="False"/>
+                </DataTrigger>
               </Style.Triggers>
             </Style>
           </Button.Style>
