--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/CSVScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/CSVScrobbleView.xaml
@@ -9,6 +9,7 @@
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:local="clr-namespace:Last.fm_Scrubbler_WPF.Views"
              xmlns:viewModels="clr-namespace:Last.fm_Scrubbler_WPF.ViewModels"
+             xmlns:scrobbleViews="clr-namespace:Last.fm_Scrubbler_WPF.Views.ScrobbleViews"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="500">
 
@@ -134,30 +135,26 @@
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="5"/>
         <RowDefinition Height="Auto"/>
+        <RowDefinition Height="5"/>
+        <RowDefinition Height="Auto"/>
       </Grid.RowDefinitions>
       <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="Auto"/>
-        <ColumnDefinition Width="5"/>
-        <ColumnDefinition Width="Auto"/>
-        <ColumnDefinition Width="5"/>
         <ColumnDefinition Width="Auto"/>
         <ColumnDefinition Width="5"/>
         <ColumnDefinition Width="*"/>
       </Grid.ColumnDefinitions>
 
-      <local:ScrobbleButtonControl Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="7"/>
+      <local:ScrobbleButtonControl Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="7"/>
 
       <Label Grid.Column="0" Grid.Row="0" Content="Scrobble Mode:"/>
       <ComboBox Grid.Column="2" Grid.Row="0" SelectedValue="{Binding ScrobbleMode}" ItemsSource="{Binding Source={StaticResource ScrobbleModeKeyDataProvider}}"
                 Style="{StaticResource EnableControlsStyle}"/>
 
       <Label Grid.Column="0" Grid.Row="2" Content="Finishing time:" Visibility="{Binding ShowImportModeSettings, Converter={StaticResource boolToVis}}"/>
-      <xctk:DateTimePicker Grid.Column="2" Grid.Row="2" Visibility="{Binding ShowImportModeSettings, Converter={StaticResource boolToVis}}"
-                           Value="{Binding FinishingTime}" Minimum="{Binding Source={x:Static viewModels:MainViewModel.MinimumDateTime}}"
-                           Style="{StaticResource EnableControlsStyle}"/>
+      <scrobbleViews:SelectScrobbleTimeControl Grid.Row="2" Grid.Column="2" Visibility="{Binding ShowImportModeSettings, Converter={StaticResource boolToVis}}"/>
 
-      <Label Grid.Column="4" Grid.Row="2" Content="Duration per Song (sec):" Visibility="{Binding ShowImportModeSettings, Converter={StaticResource boolToVis}}"/>
-      <xctk:IntegerUpDown Grid.Column="6" Grid.Row="2" Minimum="1" Value="{Binding Duration}"
+      <Label Grid.Column="0" Grid.Row="4" Content="Duration per Song (sec):" Visibility="{Binding ShowImportModeSettings, Converter={StaticResource boolToVis}}"/>
+      <xctk:IntegerUpDown Grid.Column="2" Grid.Row="4" Minimum="1" Value="{Binding Duration}"
                           Visibility="{Binding ShowImportModeSettings, Converter={StaticResource boolToVis}}" Style="{StaticResource EnableControlsStyle}"/>
     </Grid>
 
